--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "homepage": "https://freem11.github.io/",
-  "name": "divegolanding",
+  "name": "scubaseasons",
   "private": true,
   "version": "0.0.0",
   "type": "module",
